# rules_sqlc

./: MODULE.bazel  README.md
e2e/smoke/: BUILD.bazel  MODULE.bazel  go.mod
e2e/smoke/go-sqlite/: BUILD.bazel  main.go
e2e/smoke/go-sqlite/db/: BUILD.bazel
sqlc/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
sqlc/private/: BUILD.bazel  generate.bzl  toolchains_repo.bzl  versions.bzl
