bazel_dep(name = "rules_sqlc", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.49.0")
bazel_dep(name = "gazelle", version = "0.38.0")

local_path_override(
    module_name = "rules_sqlc",
    path = "../..",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")


sqlc = use_extension("@rules_sqlc//sqlc:extensions.bzl", "sqlc")
sqlc.toolchain(sqlc_version = "1.27.0")
use_repo(sqlc, "sqlc_toolchains")

register_toolchains("@sqlc_toolchains//:all")
